[gd_scene load_steps=10 format=2]

[ext_resource path="res://Fonte/DTM-Sans.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Scripts/Playables/Checklist.gd" type="Script" id=2]
[ext_resource path="res://Sprites/Checklist/prancheta.png" type="Texture" id=3]
[ext_resource path="res://Scenes/Overlays/misc/Checklist.tres" type="Theme" id=4]

[sub_resource type="DynamicFont" id=1]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 13
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 13
font_data = ExtResource( 1 )

[node name="Checklist" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="ColorRect" type="Sprite" parent="."]
position = Vector2( 174, 309 )
texture = ExtResource( 3 )

[node name="CheckBox" type="CheckBox" parent="ColorRect"]
margin_left = -100.0
margin_top = -92.0
margin_right = -62.0
margin_bottom = -56.0
theme = ExtResource( 4 )

[node name="RichTextLabel" type="RichTextLabel" parent="ColorRect/CheckBox"]
margin_left = 41.0
margin_top = 12.0
margin_right = 209.0
margin_bottom = 30.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 1 )
text = "Equipamento de segurança"
scroll_active = false

[node name="CheckBox2" type="CheckBox" parent="ColorRect"]
margin_left = -100.0
margin_top = -42.0
margin_right = -62.0
margin_bottom = -6.0
theme = ExtResource( 4 )

[node name="RichTextLabel2" type="RichTextLabel" parent="ColorRect/CheckBox2"]
margin_left = 41.0
margin_top = 13.0
margin_right = 167.0
margin_bottom = 37.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 2 )
text = "Ferramentas"

[node name="CheckBox3" type="CheckBox" parent="ColorRect"]
margin_left = -100.0
margin_top = 6.0
margin_right = -62.0
margin_bottom = 42.0
theme = ExtResource( 4 )

[node name="RichTextLabel3" type="RichTextLabel" parent="ColorRect/CheckBox3"]
margin_left = 41.0
margin_top = 12.0
margin_right = 186.0
margin_bottom = 33.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 3 )
text = "Verificação do poste"
scroll_active = false

[node name="CheckBox4" type="CheckBox" parent="ColorRect"]
margin_left = -100.0
margin_top = 58.0
margin_right = -62.0
margin_bottom = 94.0
theme = ExtResource( 4 )

[node name="RichTextLabel4" type="RichTextLabel" parent="ColorRect/CheckBox4"]
margin_left = 41.0
margin_top = 11.0
margin_right = 213.0
margin_bottom = 35.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 4 )
text = "Condições climáticas"

[node name="CheckBox5" type="CheckBox" parent="ColorRect"]
margin_left = -99.0
margin_top = 111.0
margin_right = -61.0
margin_bottom = 147.0
theme = ExtResource( 4 )

[node name="RichTextLabel5" type="RichTextLabel" parent="ColorRect/CheckBox5"]
margin_left = 40.0
margin_top = 12.0
margin_right = 243.0
margin_bottom = 36.0
custom_colors/default_color = Color( 0, 0, 0, 1 )
custom_fonts/normal_font = SubResource( 5 )
text = "Verificação dos cabos"
